# proposal-observability

./: .gitignore  README.md  pyproject.toml
configs/public/: qwen35_08b_diagnostic_smoke.toml  qwen35_2b_stage1a_k2_seed20260511.toml
docs/results/: stage1a_summary.md
src/progate/: __init__.py  aggressive_configs.py  analyze_cga.py  analyze_gate.py  analyze_pilot0.py  analyze_verified_cga.py  benchmark_overhead.py  bootstrap_gap.py  cli.py  compare_updates.py  config.py  control_analysis.py  diagnostic_baselines.py  io.py  pilot0.py  pilot0_lora.py  repro.py  robustness.py  run_dir.py  smoke_model.py  summarize_sweep.py
