[project]
name = "progate"
version = "0.1.0"
description = "Commit-gated optimizer proposal experiments for early-stage LLM adaptation."
readme = "README.md"
requires-python = ">=3.14.5,<3.15"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.5",
    "hf-transfer>=0.1.9",
    "peft>=0.19.1",
    "pillow>=12.2.0",
    "safetensors>=0.7.0",
    "torch>=2.11.0",
    "transformers>=5.8.0",
]

[project.scripts]
progate = "progate.cli:main"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"
